--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "uuidv4": "^6.2.11",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
